# event-analyzer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: app.py  constants.py  data_processing.py  home.py  utils.py
app/pages/: dataset_analyzing.py  model_learning.py
models/: first_model_10000.cbm  first_model_3000.cbm  first_model_5000.cbm  first_model_50000.cbm  pivot.json
scripts/: extract_features_worker.py
